# proyecto-grado

./: clean_solutions.py  constants.py  convert_previas.py  csv_data_to_model_data.py  ema_schedule.csv  ema_schedule_1s1p.csv  ema_schedule_1s1p_revisado.csv  ema_schedule_1s2p.csv  ema_schedule_2s1p.csv  ema_schedule_2s2p.csv  ema_schedule_copy.csv  evaluate_alpha_and_turns_consideration.csv  evaluate_alpha_and_turns_consideration.py  generate_schedule.py  generated_schedule.csv  get_uc.py  graphic_results_parameters.py  main.py  matriz_concurrencia.csv  metrics.py  procesar_previas.py  process_coincidence_and_courses.py  process_matriz.py  process_uri_data.py  pyproject.toml  results.csv  results_alpha.csv  results_parameters.csv  results_parameters_alpha:0.5.csv  results_parameters_alpha:1.csv  results_parameters_vf.csv  run_all_solvers.py  run_metrics.py  run_metrics_per_alpha.py  schedule.csv  schedule2-v2.csv  schedule_1s1p_corregido_best.csv  schedule_1s1p_corregido_final.csv  schedule_1s1p_revisado_40.csv  schedule_1s2p.csv  (+14 more)
caso2/: capacidad.csv  datos.csv  preasignaciones.csv  turnos_dias.csv  unidades_curriculares.csv
caso_lg_s_1_p_1/: capacidad.csv  coincidencia.csv  datos.csv  inscriptos.csv  turnos_dias.csv
caso_md/: carreras.csv
caso_sm/: profesores.csv  trayectoria_sugerida.csv
con_turnos/: csv_data_to_model_data.py  solve.py
data/: coincidencia_sem2.csv  inscriptos_sem2.csv  inscritos_por_uc_anio.csv  previas.yml  unidades_curriculares.csv
old_outputs/: schedule_2025.02.03_22:26:05.csv  schedule_2025.02.04_22:46:41.csv
sin_turnos/: solve.py  (+1 more)
(+509 files in other folders)
