[tool.poetry]
name = "proyecto-grado"
version = "0.1.0"
description = ""
authors = ["Facundo Spira <facundospira@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
PuLP = "^2.9.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
